--- a/02-Python Statements/09-Guessing Game Challenge.ipynb
+++ b/02-Python Statements/09-Guessing Game Challenge.ipynb
@@ -46,12 +46,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "51"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "num = random.randint(1,100)\n",
+    "num"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,12 +77,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to GUESS THE NUMBER\n",
+      "here are the rules:\n",
+      "1. If a player's guess is less than 1 or greater than 100 is it OUT OF BOUNDS\n",
+      "2. On a player's first turn, if their guess is within 10 of the number it is WARM, further than 10 away from the number is it cold\n",
+      "3. On all subsequent turns, if a guess is closer to the number than the previous guess it is WARMER! and further is COLDER!\n",
+      "4. When the player's guess equals the number, they win and see how many guesses it took them\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Welcome to GUESS THE NUMBER')\n",
+    "print('here are the rules:')\n",
+    "print(\"1. If a player's guess is less than 1 or greater than 100 is it OUT OF BOUNDS\")\n",
+    "print(\"2. On a player's first turn, if their guess is within 10 of the number it is WARM, further than 10 away from the number is it cold\")\n",
+    "print(\"3. On all subsequent turns, if a guess is closer to the number than the previous guess it is WARMER! and further is COLDER!\")\n",
+    "print(\"4. When the player's guess equals the number, they win and see how many guesses it took them\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,12 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "guesses = [0]\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,15 +137,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
+    "    player = int(input(\"Enter a number between 1 to 100 inclusive:\"))\n",
+    "    if player<1 or player >100:\n",
+    "        print(\"OUT OF BOUND!\")\n",
+    "    else:\n",
+    "        print(player)\n",
     "    \n",
-    "    pass"
+    "    guesses.append(player)\n",
+    "    break"
    ]
   },
   {
@@ -121,16 +176,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CONGRATS YOU GOT IT!!\n",
+      "number of attempts:  28\n",
+      "correct answer is:  51\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
+    "    player = int(input(\"Enter another number between 1 to 100 inclusive:\"))\n",
+    "    if player == num:\n",
+    "        print(\"CONGRATS YOU GOT IT!!\")\n",
+    "        print(\"number of attempts: \",len(guesses))\n",
+    "        print(\"correct answer is: \", num)\n",
+    "        break\n",
+    "    elif player<1 or player >100:\n",
+    "        print(\"OUT OF BOUND!\")\n",
+    "    elif abs(player-num) <= 10:\n",
+    "        print('WARMER!')\n",
+    "    else: \n",
+    "        print(\"COLDER!\")\n",
+    "    \n",
     "\n",
-    "    # we can copy the code from above to take an input\n",
-    "\n",
+    "    guesses.append(player)\n",
     "    pass"
    ]
   },
@@ -167,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
