--- a/05-Object Oriented Programming/02-Object Oriented Programming Homework.ipynb
+++ b/05-Object Oriented Programming/02-Object Oriented Programming Homework.ipynb
@@ -33,13 +33,14 @@
     "class Line:\n",
     "    \n",
     "    def __init__(self,coor1,coor2):\n",
-    "        pass\n",
+    "        self.coor1 = coor1\n",
+    "        self.coor2 = coor2\n",
     "    \n",
     "    def distance(self):\n",
-    "        pass\n",
+    "        return ((self.coor1[0]-self.coor2[0])**2+(self.coor1[1]-self.coor2[1])**2)**(1/2)\n",
     "    \n",
     "    def slope(self):\n",
-    "        pass"
+    "        return ((self.coor1[1]-self.coor2[1])/(self.coor1[0]-self.coor2[0]))"
    ]
   },
   {
@@ -115,27 +116,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "class Cylinder:\n",
-    "    \n",
+    "    pi = 3.14\n",
     "    def __init__(self,height=1,radius=1):\n",
-    "        pass\n",
+    "        self.height = height \n",
+    "        self.radius = radius\n",
     "        \n",
     "    def volume(self):\n",
-    "        pass\n",
+    "        return(self.radius**2)*self.height*Cylinder.pi\n",
     "    \n",
     "    def surface_area(self):\n",
-    "        pass"
+    "        return(self.radius**2)*Cylinder.pi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +158,7 @@
        "56.52"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,16 +169,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "94.2"
+       "28.26"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
