--- a/05-Object Oriented Programming/04-OOP Challenge.ipynb
+++ b/05-Object Oriented Programming/04-OOP Challenge.ipynb
@@ -34,19 +34,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "class Account:\n",
-    "    pass"
+    "    def __init__(self, owner, balance):\n",
+    "        self.owner = owner\n",
+    "        self.balance = balance\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f\"balance is:  {self.balance} \\nowner is: {self.owner}\"\n",
+    "    \n",
+    "    def withdraw(self, amount):\n",
+    "        if amount > self.balance:\n",
+    "            print(\"Cannot withrdaw an amount more than balance insert an amount less than your balance \", self.balance)\n",
+    "        else:\n",
+    "            self.balance = self.balance - amount\n",
+    "            print(\"Successfully withdrawn new balance is: \", self.balance)\n",
+    "    \n",
+    "    def deposit(self, amount):\n",
+    "        self.balance= self.balance+amount\n",
+    "        print (\"Deposit accepted, new balance is: \",self.balance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -58,15 +74,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Account owner:   Jose\n",
-      "Account balance: $100\n"
+      "balance is:  100 \n",
+      "owner is: Jose\n"
      ]
     }
    ],
@@ -77,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +102,7 @@
        "'Jose'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +123,7 @@
        "100"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,14 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deposit Accepted\n"
+      "Deposit accepted, new balance is:  150\n"
      ]
     }
    ],
@@ -137,14 +153,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Withdrawal Accepted\n"
+      "Sucesfully withdrawn new balance is:  0\n"
      ]
     }
    ],
@@ -154,14 +170,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Funds Unavailable!\n"
+      "Cannot withrdaw an amount more than balance insert an amount less than your balance  75\n"
      ]
     }
    ],
@@ -194,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
